k8s/ingress-service.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/use-regex: 'true'
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
#     cert-manager.io/cluster-issuer: 'letsencrypt-prod'
#     nginx.ingress.kubernetes.io/ssl-redirect: 'true'
# spec:
#   # tls:
#   #   - hosts:
#   #       - david-aws.net
#   #       - www.david-aws.net
#   #     secretName: yourdomain-com
#   # rules:
#   #   - host: david-aws.net
#       http:
#         paths:
#           - path: /?(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: client-cluster-ip-service
#                 port:
#                   number: 3000
#           - path: /api/?(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: server-cluster-ip-service
#                 port:
#                   number: 5000
#     # - host: www.david-aws.net
#     #   http:
#     #     paths:
#     #       - path: /?(.*)
#     #         pathType: Prefix
#     #         backend:
#     #           service:
#     #             name: client-cluster-ip-service
#     #             port:
#     #               number: 3000
#     #       - path: /api/?(.*)
#     #         pathType: Prefix
#     #         backend:
#     #           service:
#     #             name: server-cluster-ip-service
#     #             port:
#     #               number: 5000

apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD ANNOTATION
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE ANNOTATION
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: server-cluster-ip-service
                port:
                  number: 5000
